--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.7",
+    "@vercel/analytics": "^1.3.1",
     "groq-sdk": "^0.5.0",
     "next": "14.2.5",
     "openai": "^4.55.4",
