--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.7",
     "@vercel/analytics": "^1.3.1",
+    "dotenv": "^16.4.5",
     "groq-sdk": "^0.5.0",
     "next": "14.2.5",
     "openai": "^4.55.7",
