--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.7",
+    "@pinecone-database/pinecone": "^3.0.3",
     "@vercel/analytics": "^1.3.1",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.5.0",
     "next": "14.2.5",
-    "openai": "^4.55.7",
+    "openai": "^4.62.0",
     "react": "^18",
     "react-dom": "^18"
   },
